MC-216 Adding server reconnection flow through server bridge process
Co-authored-by: Copilot <copilot@github.com>